# algorithms

./: README.md
go-mergesort/: mergesort.go
mergesort/: mergesort.go  mergesort_test.go
rs-mergesort/: Cargo.toml
rs-mergesort/benches/: mergesort-benchmark.rs
rs-mergesort/src/: lib.rs  main.rs
