[package]
name = "rs-mergesort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num_cpus = "1.0"
rayon = "1.5"
# tokio = { version = "1.18", features = ["full"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "mergesort-benchmark"
harness = false
